--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link rel="stylesheet" type="text/css" href="css/me.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-<title>kiding/떿벺</title>
+<title>떿ͩͥᷜ벺ᷛᷠͥ</title>
 
 <meta property="fb:admins"               content="522383406"> 
 <meta property="og:type"                 content="website"> 
 <meta property="og:image"                content="/image/avatar.png">
-<meta property="og:description"          content="kiding/떿벺"> 
+<meta property="og:description"          content="떿ͩͥᷜ벺ᷛᷠͥ"> 
 </head>
 
 <body>
