--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link rel="stylesheet" type="text/css" href="css/me.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-<title>떿ͩͥᷜ벺ᷛᷠͥ</title>
+<title>kiding</title>
 
 <meta property="fb:admins"               content="522383406"> 
 <meta property="og:type"                 content="website"> 
 <meta property="og:image"                content="/image/avatar.png">
-<meta property="og:description"          content="떿ͩͥᷜ벺ᷛᷠͥ"> 
+<meta property="og:description"          content="kiding"> 
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 		<h1>Hello</h1>
 
 		<ul>
-			<li>kiding <span>떿벺</span> / Dongsung Kim <span>김동성</span></li>
+			<li>Dongsung Kim <span>김동성</span></li>
 		</ul>
 
 		<br>
