--- a/index.html
+++ b/index.html
@@ -1,59 +1,23 @@
 <!DOCTYPE html>
 
 <html>
-<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-<meta name="sigh" content="I know these codes look like a giant big turd.">
+<meta charset="utf-8">
+<meta name="sigh" content="under construction">
 
-<link rel="stylesheet" type="text/css" href="css/me.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-<title>kiding</title>
-
-<meta property="fb:admins"               content="522383406"> 
-<meta property="og:type"                 content="website"> 
-<meta property="og:image"                content="/image/avatar.png">
-<meta property="og:description"          content="kiding"> 
+<title>kidi.ng</title>
+<style>
+* {
+  font-family: sans-serif;
+  text-align: center;
+}
+</style>
 </head>
 
-<body>
-
-<div class="me"></div>
-<div class="me-blur"></div>
-
 <article>
-	<section>
-		<h1>Hello</h1>
+	<h3>김동성 / Dongsung Kim</h3>
 
-		<ul>
-			<li>Dongsung Kim <span>김동성</span></li>
-		</ul>
-
-		<br>
-
-		<ul>
-			<li>Twitter. <a href="https://twitter.com/kid1ng">@kid1ng</a></li>
-			<li>Mail. <a href="mailto:kiding@me.com">kiding@me.com</a> <span>PGP</span></li>
-			<li>GitHub. <a href="https://github.com/kiding">@kiding</a></li>
-			<li>Linkedin. <a href="https://www.linkedin.com/in/kiding/">profile</a></li>
-		</ul>
-	</section>
+  <h4><a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">Linkedin</a> ᛫ <a href="https://github.com/kiding/kiding.github.io/releases/download/resume/ko_kr.pdf">Resume</a></h4>
 </article>
-
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/me.js"></script>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-2945233-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
 
 </body>
 </html>
