--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
 
 <title>kidi.ng</title>
 <style>
-* {
-  font-family: sans-serif;
-  text-align: center;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
+
+body {
+  font-family: system-ui,-apple-system,Apple SD Gothic Neo,Source Han Sans,Malgun Gothic,sans-serif;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+}
+
 </style>
 </head>
 
-<article>
-	<h3>김동성 / Dongsung Kim</h3>
-
-  <h4><a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">Linkedin</a> ᛫ <a href="https://github.com/kiding/kiding.github.io/releases/download/resume/ko_kr.pdf">Resume</a></h4>
-</article>
-
+<body>
+	<p>김동성 ᛫ Dongsung Kim</p>
+  <p><a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a> ᛫ <a href="https://github.com/kiding/kiding.github.io/releases/">Resume</a></p>
 </body>
 </html>
-
