--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@ body {
 
 <body>
 	<p>김동성 ᛫ Dongsung Kim</p>
-  <p><a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a> ᛫ <a href="https://github.com/kiding/kiding.github.io/releases/">Resume</a></p>
+  <p><a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://kiding.medium.com">Medium</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a> ᛫ <a href="https://github.com/kiding/kiding.github.io/releases/">Resume</a></p>
 </body>
 </html>
