--- a/index.html
+++ b/index.html
@@ -69,20 +69,30 @@
       display: inline-block;
     }
 
-    .word-1 svg, .word-2 svg, .word-4 svg {
-      width: 60vh;
-    }
-    .word-3 svg {
-      width: 44vh;
-    }
-
     .word svg {
       fill: transparent;
       stroke: #fff;
-      stroke-width: 0.4;
+      padding: 0.2vh;
 
       z-index: 1;
       overflow: visible;
+    }
+
+    .word-1 svg {
+      width: 60vh;
+      stroke-width: 0.4;
+    }
+    .word-2 svg {
+      width: 60vh;
+      stroke-width: 0.5;
+    }
+    .word-3 svg {
+      width: 44vh;
+      stroke-width: 0.4;
+    }
+    .word-4 svg {
+      width: 60vh;
+      stroke-width: 0.5;
     }
 
     /* hero: mask: word 2 */
