--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
       border-left: 0.5em solid #fff;
       padding-left: 0.5em;
       margin-top: 1em;
+
+      z-index: 3;
+      mix-blend-mode: difference;
     }
 
     #info a, #info a:visited {
